Adapting mobile Devices

--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 .media{
     margin: 0 auto;
-     background-color: #ffffffb8;
+     background-color: #ffffff;
     padding: 4px 9px;
     border-radius: 8px;
     position: fixed;
